src/test/ui/suggestions/type-ascription-instead-of-path-2.stderr
error: expected `::`, found `(`
  --> $DIR/type-ascription-instead-of-path-2.rs:2:55
   |
LL |     vec![Ok(2)].into_iter().collect:<Result<Vec<_>,_>>()?;
   |                                    -                  ^ expected `::`
   |                                    |
   |                                    tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to previous error

