src/test/ui/suggestions/type-ascription-instead-of-path-2.rs
fn main() -> Result<(), ()> {
    vec![Ok(2)].into_iter().collect:<Result<Vec<_>,_>>()?;
    //~^ ERROR expected `::`, found `(`
    Ok(())
}
